# notifyfork

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISH.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: auto-tag.yml  ci.yml  publish.yml
examples/: README.md
examples/custom_provider/: register_xpto_provider.py
examples/email/: send_order_confirmed.py  send_sendgrid_external.py
examples/push/: send_flash_sale.py
examples/slack/: send_system_error.py
examples/sms/: send_otp.py
examples/whatsapp/: send_order_shipped.py
notifyfork/: __init__.py  client.py
notifyfork/api/: urls.py
notifyfork/api/routing/: event_router.py
notifyfork/api/webhooks/: resend_webhook.py  sendgrid_webhook.py  tasks.py  twilio_webhook.py  urls.py
notifyfork/core/application/dtos/: send_notification_dto.py
notifyfork/core/application/interfaces/: notification_provider.py  notification_repository.py  template_repository.py
notifyfork/core/application/use_cases/: send_notification.py
notifyfork/core/domain/entities/: notification.py
notifyfork/core/domain/events/: notification_events.py
notifyfork/core/domain/value_objects/: template.py
notifyfork/core/infrastructure/: admin.py  apps.py
notifyfork/core/infrastructure/container/: __init__.py  providers.py
notifyfork/core/infrastructure/migrations/: 0001_initial.py  0002_seed_templates.py  (+1 more)
notifyfork/shared/exceptions/: provider_exceptions.py
notifyfork/shared/logging/: setup.py
tests/: conftest.py  urls.py
tests/unit/: conftest.py  test_admin.py  test_client.py  test_container.py  test_custom_provider.py  test_logging_setup.py
tests/unit/api/: test_event_router.py
tests/unit/application/: test_send_notification_use_case.py
tests/unit/domain/: test_notification_entity.py  test_notification_events.py  test_template_value_object.py
tests/unit/providers/: test_firebase_provider.py  test_resend_provider.py  test_sendgrid_provider.py  test_slack_provider.py  test_twilio_provider.py  test_whatsapp_provider.py
tests/unit/webhooks/: test_delivery_status.py
(+12 files in other folders)
