[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notifyfork"
version = "0.1.2"
description = "Provider-agnostic notification gateway for Django. Send to SMS, Email, WhatsApp, Push, and Slack via a single API."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mario Araujo", email = "marioasaraujo@gmail.com" }]
keywords = [
    "django",
    "notifications",
    "sms",
    "email",
    "whatsapp",
    "celery",
    "twilio",
    "firebase",
    "sendgrid",
    "resend",
    "slack",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "twilio>=9.0",
    "firebase-admin>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-django>=4.8",
    "ruff>=0.4",
    "mypy>=1.10",
    "hatch>=1.9",
]

[project.urls]
Homepage = "https://github.com/marioasaraujo/notifyfork"
Documentation = "https://github.com/marioasaraujo/notifyfork#readme"
Repository = "https://github.com/marioasaraujo/notifyfork"
"Bug Tracker" = "https://github.com/marioasaraujo/notifyfork/issues"

[tool.hatch.build.targets.wheel]
packages = ["notifyfork"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.coverage.run]
source = ["notifyfork"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
